--- a/Resources/index.html
+++ b/Resources/index.html
@@ -99,6 +99,22 @@
             </td>
           </tr>
 
+          <tr>
+            <td>
+                <table class="ending">
+
+                    <tr>
+                        <td>
+
+                            <a href="#"><img src="./images/sam-moghadam-khamseh-HYDUXzWSF5I-unsplash.jpg"></a>
+
+                        </td>
+                    </tr>
+
+                </table>
+            </td>
+          </tr>
+
         </table>
 
     </section>
